SF Primes/src/objects/Account_Strategy__c.object
<CustomObject>
    <fields>
        <fullName>AA_Account_Plan_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AA Account Plan Link</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Strategies (AA Account Plan Link)</relationshipLabel>
        <relationshipName>Account_Strategies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Advocate_Email__c</fullName>
        <label>Account Advocate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Advocate__c</fullName>
        <formula>WebID__r.Account_Advocate__r.FirstName + &apos; &apos; + WebID__r.Account_Advocate__r.LastName</formula>
        <label>Account Advocate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Secondary, No Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Secondary, Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Primary, No Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Primary, Minimal Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Primary, Large Spend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Strategies</relationshipLabel>
        <relationshipName>Account_Strategies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDK_Solution_to_be_utilized_optimized2__c</fullName>
        <label>CDK Solution to be utilized / optimized</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDK_Solution_to_be_utilized_optimized3__c</fullName>
        <label>CDK Solution to be utilized / optimized</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDK_Solution_to_be_utilized_optimized__c</fullName>
        <label>CDK Solution to be utilized / optimized</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Marketing_Planning_Process__c</fullName>
        <inlineHelpText>What is the current marketing planning process? Who is involved?
(Annual, Quarterly, Monthly)</inlineHelpText>
        <label>Current Marketing Planning Process?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DAA_Account_Plan_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DAA Account Plan Link</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Accoun Strategies (DAA Account Plan Link)</relationshipLabel>
        <relationshipName>Accoun_Strategies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Advocacy__c</fullName>
        <label>Dealer Advocacy</label>
        <picklist>
            <picklistValues>
                <fullName>Verbal Testimonial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written Testimonial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Testimonial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Email OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Call OEM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dealership_Advertising_Budget__c</fullName>
        <label>Dealership Advertising Budget</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealership_Goal_1__c</fullName>
        <label>Dealership Goal 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Goal_2__c</fullName>
        <label>Dealership Goal 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Goal_3__c</fullName>
        <label>Dealership Goal 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Digital_Advertising_Analyst_Email__c</fullName>
        <label>Digital Advertising Analyst Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Digital_Advertising_Analyst__c</fullName>
        <formula>WebID__r.Online_Marketing_Specialist__r.FirstName + &apos; &apos; +  WebID__r.Online_Marketing_Specialist__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Advertising Analyst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital__c</fullName>
        <label>% Digital</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMS_Account_Plan_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EMS Account Plan Link</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Accoun Strategies (EMS Account Plan Link)</relationshipLabel>
        <relationshipName>Accoun_Strategies2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Marketing_Specialist2__c</fullName>
        <formula>WebID__r.OwnerMktg_Specialist_lookup__r.FirstName + &apos; &apos; +  WebID__r.OwnerMktg_Specialist_lookup__r.LastName</formula>
        <label>Email Marketing Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Marketing_Specialist_Email__c</fullName>
        <label>Email Marketing Specialist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Goal_1_Digital_Marketing_Strategy__c</fullName>
        <label>Goal 1 Digital Marketing Strategy</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_2_Digital_Marketing_Strategy__c</fullName>
        <label>Goal 2 Digital Marketing Strategy</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_3_Digital_Marketing_Strategy__c</fullName>
        <label>Goal 3 Digital Marketing Strategy</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LMA_Strategist_Email__c</fullName>
        <label>LMA Strategist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LMA_Strategist__c</fullName>
        <formula>WebID__r.LMA_Strategist__r.FirstName + &apos; &apos; +  WebID__r.LMA_Strategist__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LMA Strategist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_Model_s_dealership_struggles_with__c</fullName>
        <label>Make/Model(s) dealership struggles with?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_Model_s_with_highest_sales_volume__c</fullName>
        <label>Make/Model(s) with highest sales volume?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Strategist_Email__c</fullName>
        <label>Marketing Strategist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Marketing_Strategist__c</fullName>
        <formula>WebID__r.Client_Account_Manager__r.FirstName + &apos; &apos; + WebID__r.Client_Account_Manager__r.LastName</formula>
        <label>Marketing Strategist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Vehicle_Sales_Target__c</fullName>
        <inlineHelpText>Units Per Month</inlineHelpText>
        <label>New Vehicle Sales Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_steps_for_DSM__c</fullName>
        <label>Next steps for DSM</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_steps_for_dealer__c</fullName>
        <label>Next steps for dealer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Value does not exist or does not match filter criteria. (Account Plan)</errorMessage>
            <filterItems>
                <field>Opportunity.Account.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Account Strategies</relationshipLabel>
        <relationshipName>Account_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Primary__c</fullName>
        <label>If &quot;other&quot;, specificy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Profit_Center__c</fullName>
        <label>Other Profit Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Secondary__c</fullName>
        <label>If &quot;other&quot;, specificy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center_Primary_Focus__c</fullName>
        <label>Profit Center - Primary Focus</label>
        <picklist>
            <picklistValues>
                <fullName>New Vehicle Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Vehicle Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service, Parts &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profit_Center_Seconday_Focus__c</fullName>
        <label>Profit Center - Seconday Focus</label>
        <picklist>
            <picklistValues>
                <fullName>New Vehicle Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Vehicle Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service, Parts &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profit_Centers_Digital__c</fullName>
        <label>Profit Centers</label>
        <picklist>
            <picklistValues>
                <fullName>New Vehicle Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Vehicle Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service, Pars &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profit_Centers_Social__c</fullName>
        <label>Profit Centers</label>
        <picklist>
            <picklistValues>
                <fullName>New Vehicle Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Vehicle Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service, Pars &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profit_Centers_Traditional__c</fullName>
        <label>Profit Centers</label>
        <picklist>
            <picklistValues>
                <fullName>New Vehicle Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Vehicle Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service, Pars &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMS_Account_Plan_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMS Account Plan Link</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Strategies (RMS Account Plan Link)</relationshipLabel>
        <relationshipName>Accoun_Strategies3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reputation_Management_Specialist_Email__c</fullName>
        <label>Reputation Management Specialist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reputation_Management_Specialist__c</fullName>
        <formula>WebID__r.Reputation_Management_Specialist__r.FirstName + &apos; &apos; + WebID__r.Reputation_Management_Specialist__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reputation Management Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Account_Plan_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SEO Account Plan Link</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Strategies (SEO Account Plan Link)</relationshipLabel>
        <relationshipName>Account_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SEO_Specialist_Email__c</fullName>
        <label>SEO Specialist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SEO_Specialist__c</fullName>
        <formula>WebID__r.SEO_Specialist__r.FirstName + &apos; &apos; + WebID__r.SEO_Specialist__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SEO Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Account_Plan_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMS Account Plan Link</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Accoun Strategies (SMS Account Plan Link)</relationshipLabel>
        <relationshipName>Accoun_Strategies4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Parts__c</fullName>
        <inlineHelpText>Repair Orders per mnth/gross per RO/PO</inlineHelpText>
        <label>Service/Parts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_Media_Rep_Email__c</fullName>
        <label>Social Media Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Social_Media_Representative__c</fullName>
        <formula>WebID__r.Social_Media_Specialist__r.FirstName + &apos; &apos; +  WebID__r.Social_Media_Specialist__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Media Representative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Media_Specialist2__c</fullName>
        <formula>WebID__r.Social_Media_Specialist__r.FirstName + &apos; &apos; +
WebID__r.Social_Media_Specialist__r.LastName</formula>
        <label>Social Media Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Media_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Social Media Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social__c</fullName>
        <label>% Social</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sources_Used_Digital__c</fullName>
        <label>Sources Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sources_Used_Social__c</fullName>
        <label>Sources Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sources_Used_Traditional__c</fullName>
        <label>Sources Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_New_Vehicle__c</fullName>
        <label>Target</label>
        <picklist>
            <picklistValues>
                <fullName>Above Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Target</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Other_Profit_Center__c</fullName>
        <label>Target</label>
        <picklist>
            <picklistValues>
                <fullName>Above Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Target</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Service_Parts__c</fullName>
        <label>Target</label>
        <picklist>
            <picklistValues>
                <fullName>Above Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Target</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Used_Vehicle__c</fullName>
        <label>Target</label>
        <picklist>
            <picklistValues>
                <fullName>Above Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Target</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Traditional__c</fullName>
        <label>% Traditional</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Upcoming_dealer_promotions_incentives__c</fullName>
        <label>Upcoming dealer promotions/incentives?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Used_Vehicles_Sales_Targets__c</fullName>
        <inlineHelpText>Units Per Month</inlineHelpText>
        <label>Used Vehicles Sales Targets</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WebID</label>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>Accoun Strategies</relationshipLabel>
        <relationshipName>Accoun_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>What_is_dealership_s_advertising_budget__c</fullName>
        <label>What is dealership&apos;s advertising budget?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Strategy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Account Strategy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>